--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
-  <groupId>ch.hsr.epj.localshare.demo</groupId>
-  <artifactId>demo</artifactId>
+  <groupId>ch.hsr.epj.localshare</groupId>
+  <artifactId>LocalShare</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <build>
