--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>commons-net</artifactId>
       <version>3.6</version>
     </dependency>
+      <dependency>
+          <groupId>com.googlecode.json-simple</groupId>
+          <artifactId>json-simple</artifactId>
+          <version>1.1.1</version>
+      </dependency>
   </dependencies>
 
 
