refactor code removing sun dependency

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>commons-net</artifactId>
       <version>3.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <version>1.61</version>
+    </dependency>
   </dependencies>
 
 
