--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ out/
 
 # generated key files
 keys/
+
+# test donwload files
+*.pdf
+*.jpg
+
+# generated diagram files from SketchIt!
+*.plantuml
