--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
       <groupId>com.googlecode.json-simple</groupId>
       <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <artifactId>gson</artifactId>
+      <groupId>com.google.code.gson</groupId>
+      <version>2.8.5</version>
+    </dependency>
   </dependencies>
 
 
