--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
           <archive>
             <index>true</index>
             <manifest>
-              <mainClass>ch.hsr.epj.localshare.demo.gui.application.Main</mainClass>
+              <mainClass>ch.hsr.epj.localshare.demo.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
