--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,25 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <goals>
+              <goal>report</goal>
+            </goals>
+            <id>report</id>
+            <phase>prepare-package</phase>
+          </execution>
+        </executions>
+        <groupId>org.jacoco</groupId>
+        <version>0.7.7.201606060606</version>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -89,6 +108,4 @@
       <version>1.1.1</version>
     </dependency>
   </dependencies>
-
-
 </project>
