--- a/pom.xml
+++ b/pom.xml
@@ -107,5 +107,10 @@
       <groupId>com.googlecode.json-simple</groupId>
       <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfxtras</groupId>
+      <artifactId>jmetro</artifactId>
+      <version>5.2</version>
+    </dependency>
   </dependencies>
 </project>
