--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
+      <groupId>org.jfxtras</groupId>
+      <artifactId>jmetro</artifactId>
+      <version>5.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.testfx</groupId>
       <artifactId>testfx-core</artifactId>
       <version>4.0.15-alpha</version>
